# resoluto-sandbox

./: .dockerignore  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.base  Dockerfile.claude  Dockerfile.runner  LICENSE  README.md  SECURITY.md  SOUL.md  llms.txt  mkdocs.yml  pyproject.toml  versions.json
.githooks/: pre-push
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish-image.yml  workflow.yml
.superpowers/sdd/: progress.md
0.1.0/: 404.html  index.html  index.md  llms-full.txt  llms.txt  sitemap.xml
0.1.0-rc1/: 404.html  index.html  index.md  llms-full.txt  llms.txt  sitemap.xml
0.1.0-rc1/auth/: index.html  index.md
0.1.0-rc1/backends/: index.html  index.md
0.1.0-rc1/changelog/: index.html
0.1.0-rc1/concepts/: index.html  index.md
0.1.0-rc1/concurrency/: index.html  index.md
0.1.0-rc1/getting-started/: index.html  index.md
0.1.0-rc1/networking/: index.html
0.1.0-rc1/search/: search_index.json
0.1.0-rc2/: 404.html  index.html  index.md  llms-full.txt  llms.txt  sitemap.xml
0.1.0-rc2/auth/: index.html  index.md
0.1.0-rc2/backends/: index.html  index.md
0.1.0-rc2/changelog/: index.html
0.1.0-rc2/concepts/: index.html  index.md
0.1.0-rc2/concurrency/: index.html  index.md
0.1.0-rc2/getting-started/: index.html  index.md
0.1.0-rc2/networking/: index.html
0.1.0-rc2/search/: search_index.json
0.1.0-rc2/stylesheets/: extra.css
0.1.0-rc3/: 404.html  index.html  index.md  llms-full.txt  llms.txt  sitemap.xml
0.1.0-rc3/auth/: index.html
0.1.0-rc3/backends/: index.html  index.md
0.1.0-rc3/changelog/: index.html
0.1.0-rc3/concepts/: index.html  index.md
0.1.0-rc3/concurrency/: index.html  index.md
0.1.0-rc3/examples/: index.html  index.md
0.1.0-rc3/getting-started/: index.html  index.md
0.1.0-rc3/networking/: index.html  index.md
0.1.0-rc3/protocol/: index.html  index.md
0.1.0-rc3/versioning/: index.html  index.md
0.1.0-rc4/: 404.html  index.html  index.md  llms-full.txt  llms.txt  objects.inv  sitemap.xml
0.1.0-rc4/auth/: index.html  index.md
0.1.0-rc4/backends/: index.html  index.md
0.1.0-rc4/changelog/: index.html
0.1.0-rc4/concepts/: index.html  index.md
0.1.0-rc4/concurrency/: index.html  index.md
0.1.0-rc4/examples/: index.html  index.md
0.1.0-rc4/getting-started/: index.html  index.md
0.1.0-rc4/networking/: index.html  index.md
0.1.0-rc4/protocol/: index.html  index.md
0.1.0-rc4/versioning/: index.html  index.md
0.1.0/auth/: index.html
0.1.0/backends/: index.html  index.md
0.1.0/changelog/: index.html
0.1.0/concepts/: index.html  index.md
0.1.0/concurrency/: index.html  index.md
0.1.0/examples/: index.html  index.md
0.1.0/getting-started/: index.html  index.md
0.1.0/networking/: index.html
0.1.0/protocol/: index.html  index.md
0.1.0/versioning/: index.html  index.md
docs/: auth.md  backends.md  changelog.md  concepts.md  concurrency.md  examples.md  getting-started.md  index.md  networking.md  protocol.md  versioning.md
docs/api/: conduit.md  driver.md  pool.md  runtime.md  sandbox.md  security.md  staging.md  telemetry.md
docs/stylesheets/: extra.css
examples/: 01_local_hello.py  02_run_via_sandbox.py  README.md  claude_agent.py  echo_agent.py  langchain_agent.py  llm_agent.py  openai_agent.py  run_agent_in_sandbox.py  run_hello_in_sandbox.py  smoke_both_backends.py  smoke_llm.py
examples/payloads/: claude_agent.py  hello.py  langchain_agent.py  (+1 more)
images/: claude.Dockerfile  langchain.Dockerfile  openai.Dockerfile
main/: 404.html  index.html  index.md  llms-full.txt  llms.txt  objects.inv  sitemap.xml
scripts/: local-backend-up.sh  release-preflight.sh
spec/: PROTOCOL.md  event.schema.json  manifest.schema.json  result.schema.json  task.schema.json
tests/: canary_stub.py  conftest.py  test_backend_k8s_unit.py  test_backends.py  test_cli.py  test_client_k8s.py  test_client_local.py  test_conduit_local.py  test_conduit_selector.py  test_core_import_is_light.py  test_decoupling.py  test_deps.py  test_docker_runtime.py  test_docs_surface_guard.py  test_driver.py  test_e2e.py  test_e2e_lane.py  test_egress.py  test_egress_canary.py  test_egress_proxy.py  test_envfile.py  test_gcs_conduit.py  test_images.py  test_k8s_context_pin.py  test_k8s_integration.py  test_k8s_launch_errors.py  test_k8s_lifecycle.py  test_k8s_manifest.py  test_kata_nerdctl_runtime.py  test_local_docker_integration.py  test_local_kata_integration.py  test_localfs.py  test_mint_scoped_credential.py  test_network_policy.py  test_no_internal_refs.py  test_objectstore_copy_prefix.py  test_pool.py  test_pool_mem_budget.py  test_properties.py  test_protocol_schema.py  (+12 more)
(+166 files in other folders)
