[project]
name = "resoluto-sandbox"
version = "0.1.0rc2"
description = "Resoluto sandbox: store-mediated, Kata-isolated, cloud-agnostic execution substrate"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
]

[project.scripts]
resoluto-sandbox = "resoluto.sandbox.cli:main"

[project.optional-dependencies]
k8s = ["kubernetes-asyncio>=31.1.0", "aioboto3>=13.0.0"]
s3 = ["aioboto3>=13.0.0"]
gcs = ["gcloud-aio-storage>=9.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resoluto"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: hits the live k3s+kata cluster",
    "k8s: needs k3s+kata",
    "local: needs nerdctl+dedicated containerd",
    "s3: needs minio",
]
addopts = "-m 'not integration'"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "kubernetes-asyncio>=31.1.0",
    "aioboto3>=13.0.0",
    "jsonschema>=4.26.0",
    "hypothesis>=6.155.7",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mike>=2.1",
    "mkdocs-llmstxt>=0.1",
    "ruff>=0.6",
    "resoluto-sandbox",
]
