[project]
name = "resoluto-sandbox"
version = "0.1.0"
description = "Resoluto sandbox: store-mediated, Kata-isolated, cloud-agnostic execution substrate"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "DeepBlueCoding" }]
keywords = ["sandbox", "kata", "isolation", "microvm", "execution", "agentic", "resoluto"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://deepbluecoding.github.io/resoluto-sandbox/"
Documentation = "https://deepbluecoding.github.io/resoluto-sandbox/"
Repository = "https://github.com/DeepBlueCoding/resoluto-sandbox"
Changelog = "https://github.com/DeepBlueCoding/resoluto-sandbox/blob/master/CHANGELOG.md"
Issues = "https://github.com/DeepBlueCoding/resoluto-sandbox/issues"

[project.scripts]
resoluto-sandbox = "resoluto.sandbox.cli:main"

[project.optional-dependencies]
k8s = ["kubernetes-asyncio>=31.1.0", "aioboto3>=13.0.0"]
s3 = ["aioboto3>=13.0.0"]
gcs = ["gcloud-aio-storage>=9.3.0"]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resoluto"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: hits the live k3s+kata cluster",
    "k8s: needs k3s+kata",
    "local: needs nerdctl+dedicated containerd",
    "s3: needs minio",
]
addopts = "-m 'not integration'"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "kubernetes-asyncio>=31.1.0",
    "aioboto3>=13.0.0",
    "jsonschema>=4.26.0",
    "hypothesis>=6.155.7",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mike>=2.1",
    "mkdocs-llmstxt>=0.1",
    "ruff>=0.6",
    "resoluto-sandbox[k8s,s3,gcs]",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# E402: this codebase deliberately places guarded optional-SDK imports and a few
# module-level constants before imports. E501: line width is owned by `ruff format`.
ignore = ["E402", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["F401", "F811", "E741"]
